[tool.poetry]
name = "rabe-nowplaying"
version = "0.0.0" # 0.0.0 placeholder is replaced on release
description = "Now Playing RaBe Songticker"
repository = "https://github.com/radiorabe/nowplaying"
authors = ["RaBe IT-Reaktion <it@rabe.ch>"]
license = "AGPL-3"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU Affero General Public License v3",
]
readme = "README.md"
packages = [
    { include = "nowplaying"},
]

[tool.poetry.scripts]
nowplaying = 'nowplaying.__main__:main'

[tool.poetry.dependencies]
python = "^3.12"
Werkzeug = ">=2.3.6,<4.0.0"
configargparse = "^1.5.5"
CherryPy = "^18.8.0"
requests = "^2.31.0"
rabe-cridlib = ">=0.10.1,<0.13.0"
pytz = ">=2023.3"
pylast = "^5.2.0"
cloudevents = "^1.9.0"
isodate = ">=0.6.1,<0.8.0"
lxml = ">=4.9.2,<6.0.0"
nowplaypadgen = ">=0.4.9,<0.6.0"
opentelemetry-api = "^1.18.0"
opentelemetry-exporter-otlp = "^1.18.0"
opentelemetry-sdk = "^1.18.0"

[tool.poetry.group.dev.dependencies]
black = ">=23.1,<25.0"
isort = "^5.12.0"
pydocstyle = "^6.1.1"
pytest = ">=7.2.3,<9.0.0"
pytest-cov = ">=4,<7"
pytest-random-order = "^1.1.0"
pytest-ruff = ">=0.4.0,<0.5"
ruff = ">=0.8.0,<0.9.2"
faker = ">=26.0.0,<34.0.0"
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.7"
mkdocs-autorefs = ">=0.5,<1.3"
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.1"
mkdocs-section-index = "^0.3.8"
mkdocstrings-python = "^1.7.3"

[tool.isort]
line_length = 120
profile = "black"

[tool.pytest.ini_options]
minversion = "7.2"
addopts = "-ra -q --random-order --doctest-glob='*.md' --doctest-modules --cov=nowplaying --cov-fail-under=100 --ruff --ignore docs/"
filterwarnings = [
    "ignore::DeprecationWarning:cairosvg",
    "ignore::DeprecationWarning:cherrypy",
    "ignore::DeprecationWarning:google",
    "ignore::DeprecationWarning:importlib",
    "ignore::DeprecationWarning:pkg_resources",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
